--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@blog, url: choose_new_or_edit) do |f| %>
+<%= form_for(@blog, url: blog_choose_new_or_edit) do |f| %>
   <% if @blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= @blog.errors.count %>件のエラーがあります。</h2>
