--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,7 +3,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<%= form_for(@contact, url:choose_new_or_edit) do |f| %>
+<%= form_for(@contact, url:contact_choose_new_or_edit) do |f| %>
   <% if @contact.errors.any? %>
     <div id="error_explanation">
       <h2><%= @contact.errors.count %>件のエラーがあります。</h2>
