--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,8 +5,9 @@
       <%= link_to "ブログを作成する", new_blog_path, class: 'btn btn-default' %>
     <% @blogs.each do |blog| %>
     <div class="row">
-      <h4><strong><%= blog.title %></strong></h4>
-      <p><%= blog.content %></p>
+      <p>ユーザー名: <%= blog.user.name %></p>
+      <h4><strong>タイトル: <%= blog.title %></strong></h4>
+      <p>本文: <%= blog.content %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
       <%= link_to "削除", blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-default btn-sm btn btn-danger' %>
     </div>
