--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,30 @@
 </head>
 <body>
   
-  <header>
+<header>
+  <nav>
     <ul>
       <li><%=link_to "Achieve", root_path %></li>
       <li><%=link_to "トップページ", root_path %></li>
       <li><%=link_to "お問い合わせ", new_contact_path %></li>
-      <li><%=link_to "ブログ", blogs_path %></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><%= link_to "ブログ", blogs_path %></li>
+        </ul>
+      </li>
+      <% if user_signed_in? %>
+        <li><%= link_to 'マイページ', edit_user_registration_path %></li>
+        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to 'ログイン', new_user_session_path %></li>
+        <li><%= link_to 'サインアップ', new_user_registration_path %></li>
+      <% end %>
     </ul>
-  </header>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+</header>
 
 <%= yield %>
 
