--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
 <section class="main-header">
-  <img src="<%=asset_path "achieve.png" %>">
+  <p class="flash"><%= notice %><%= alert %></p>
+  <img src="<%= asset_path "achieve.png" %>">
 </section>
 <section class="about">
   <h1>About Achieve</h1>
