--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,7 +5,7 @@
       <%= link_to "ブログを作成する", new_blog_path, class: 'btn btn-default' %>
     <% @blogs.each do |blog| %>
     <div class="row">
-      <p>ユーザー名: <%= blog.user.name %></p>
+      <p>ユーザー名: <%= blog.user.name if blog.user %></p>
       <h4><strong>タイトル: <%= blog.title %></strong></h4>
       <p>本文: <%= blog.content %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
