--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -41,6 +41,9 @@
           <p>コメント投稿機能</p>
         </div>
       </div>
+      <div id="page-top-btn" class="page-top-btn">
+        <p><a class="move-page-top" id="move-page-top">▲</a></p>
+      </div>
     </div>
   </div>
 </section>
