--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -8,27 +8,50 @@ header {
   height: 54px;
 }
 
-header ul {
-  margin: 0 auto;
-  list-style: none;
+.navbar-default {
+    border: 0;
 }
-
-header ul a {
-  display: block;
-  padding: 15px;
-  text-decoration: none;
-  color: white;
+.navbar {
+    background-color: transparent;
+    color: white;
+    margin-bottom: 0px;
 }
-
-header li {
-  float: left;
-  width: auto;
+.navbar-default {
+  .navbar-brand {
+    color: #ccc;
+    &:hover {
+      color: white;
+    }
+  }
+  .navbar-nav > li > a {
+    color: #ccc;
+    &:hover, &:focus {
+      color: white;
+    }
+  }
+  .navbar-nav > .open > a {
+    background-color: transparent;
+    color: white;
+    &:hover, &:focus {
+      background-color: transparent;
+      color: white;
+    }
+  }
 }
-
-header ul:after {
-  content: "";
-  display: block;
-  clear: both;
+@media (max-width: 767px) {
+.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #ccc;
+    text-align: center;
+    &:hover, &:focus {
+      color: white;
+    }
+  }
+  .navbar-default .navbar-toggle {
+    background-color: transparent;
+    &:hover, &:focus {
+      background-color: transparent;
+    }
+  }
 }
 
 .main-header {
@@ -82,4 +105,27 @@ body {
 .flash {
   color: white;
   padding-top: 10px;
+}
+
+.page-top-btn {
+  display: none;
+  border-radius: 50px;
+  background: #336699;
+  width: 60px;
+  height: 60px;
+  transition: all 0.3s;
+  cursor: pointer;
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  z-index: 20;
+  a {
+    display: block;
+    color: white;
+    line-height: 60px;
+    text-decoration: none;
+  }
+  &:hover {
+  opacity: 0.7;
+  }
 }
