--- a/app/views/notice_mailer/sendmail_contact.html.erb
+++ b/app/views/notice_mailer/sendmail_contact.html.erb
@@ -1,9 +1,5 @@
-<h1>Achieveに問い合わせが届きました</h1>
+<h1>Achieveへのお問い合わせありがとうございました。</h1>
 
 <p>name: <%= @contact.name %></p>
 <p>email: <%= @contact.email %></p>
 <p>content: <%= @contact.content %></p>
-
-<p>
-  <%= link_to '確認はこちらから', blogs_url %>
-</p>
