--- a/app/assets/stylesheets/normalize.css
+++ b/app/assets/stylesheets/normalize.css
@@ -442,6 +442,10 @@ template {
  * Add the correct display in IE 10-.
  */
 
-[hidden] {
+img{
+  max-width: 100%;
+}
+
+[hidden]{
   display: none;
 }
