--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -3,9 +3,13 @@
     <p><%= notice %></p>
     <h1>ブログ一覧</h1>
       <%= link_to "ブログを作成する", new_blog_path, class: 'btn btn-default' %>
+
     <% @blogs.each do |blog| %>
     <div class="row">
-      <p>ユーザー名: <%= blog.user.name if blog.user %></p>
+      <div class="field">
+        <%= profile_img(blog.user) if profile_img(blog.user) %>
+      </div>
+      <p><%= blog.user.name if blog.user %>が投稿しました。</p>
       <h4><strong>タイトル: <%= blog.title %></strong></h4>
       <p>本文: <%= blog.content %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
@@ -13,7 +17,8 @@
     </div>
     <% end %>
   </div>
-    <div id="page-top-btn" class="page-top-btn">
+
+  <div id="page-top-btn" class="page-top-btn">
     <p><a class="move-page-top" id="move-page-top">▲</a></p>
   </div>
 </div>
