--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,6 +42,7 @@
     <%= f.file_field :avatar %>
     <%= f.hidden_field :avatar_cache %>
   </div>
+  <% end %>
   
   <div class="actions">
     <%= f.submit '更新', class: 'btn btn-primary btn-block' %>
