--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -10,7 +10,9 @@
         <%= profile_img(blog.user) if profile_img(blog.user) %>
       </div>
       <p><%= blog.user.name if blog.user %>が投稿しました。</p>
+      <%= link_to blog_path(blog) do %>
       <h4><strong>タイトル: <%= blog.title %></strong></h4>
+      <% end %>
       <p>本文: <%= blog.content %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
       <%= link_to "削除", blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-default btn-sm btn btn-danger' %>
