--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -129,3 +129,15 @@ body {
   opacity: 0.7;
   }
 }
+
+.followed_users {
+  background-color: #e9e9e9;
+  padding: 80px;
+  padding-bottom: 185px;
+}
+
+.followers {
+  background-color: #EFF5FB;
+  padding: 80px;
+  padding-bottom: 185px;
+}
