--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>編集 <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -10,7 +10,7 @@
     <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "メールアドレス" %>
   </div>
   <br>
-  
+
   <div class="field">
     <%= f.text_field :name, class: "form-control", placeholder: "名前" %>
   </div>
@@ -25,25 +25,25 @@
     <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "パスワード" %>
   </div>
   <br>
-  
+
   <div class="field">
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "パスワード（確認）" %>
   </div>
   <br>
-  
+
   <div class="field">
     <%= f.password_field :current_password, autocomplete: "off", class: "form-control", placeholder: "現在のパスワード" %>
   </div>
   <br>
   <% end %>
-  
+
   <div class="field">
     <%= profile_img(@user) if profile_img(@user) %>
     <%= f.file_field :avatar %>
     <%= f.hidden_field :avatar_cache %>
   </div>
-  <% end %>
-  
+  <br>
+
   <div class="actions">
     <%= f.submit '更新', class: 'btn btn-primary btn-block' %>
   </div>
