--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  
+
 <header>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -37,6 +37,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><%= link_to "ブログ", blogs_path %></li>
+          <li><%= link_to 'ユーザー一覧', users_path if user_signed_in? %></li>
           </ul>
           </li>
         </ul>
@@ -52,6 +53,6 @@
     <p>運営会社DIVE INTO CODE株式会社</p>
     <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
   </footer>
-  
+
 </body>
 </html>
