--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,8 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><%= link_to "ブログ", blogs_path %></li>
-          <li><%= link_to 'ユーザー一覧', users_path if user_signed_in? %></li>
+          <li><%= link_to 'ユーザー', users_path if user_signed_in? %></li>
+          <li><%= link_to "メッセージ", conversations_path %></li>
           </ul>
           </li>
         </ul>
