--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,13 @@
   <% @users.each do |user| %>
       <div class="container-child col-md-2 col-sm-4 col-xs-6 ">
         <%= profile_img(user) %>
-        <%= user.name %>
-        <%= user.email %>
-        <%= render 'follow_form', user: user %>
-        <%= link_to "詳細を見る", user_path(user.id), class: 'btn btn-default' %>
+        <ul style="list-style:none;">
+          <li><%= link_to user.name, user %></li>
+          <li><% if user.id != current_user.id %></li>
+          <li><%= link_to 'メッセージを送る', conversations_path(sender_id: current_user.id, recipient_id: user.id), method: 'post'%></li>
+        </ul>
+        <%= render partial: 'follow_form', locals: { user: user } if signed_in?   %>
+        <% end %>
       </div>
   <% end %>
 </div>
